--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,14 @@
     <string name="manual">Manual</string>
     <string name="training">Training Video</string>
     <string name="co_name">Vixiar Medical Inc.</string>
-    <string name="tag_line">Non Invasive LVEDP Measurement</string>
+    <string name="tag_line">LVEDP Estimation Diagnostic Test</string>
     <string name="application_name">Indicor Navigator </string>
     <string name="vixiar_web">www.vixiar.com</string>
 
     <!-- PI Screen -->
     <string name="pat_info">Patient Information</string>
     <string name="complete_data_entry">Complete Patient Data Entry</string>
-    <string name="continue_practice_or_test">Continue to practice or begin test</string>
+    <string name="continue_practice_or_test">Practice or continue to test</string>
     <string name="setting_label_pi">Patient ID</string>
     <string name="setting_label_dob">Date of Birth</string>
     <string name="setting_label_height">Height</string>
@@ -50,7 +50,6 @@
         <item>Female</item>
     </string-array>
 
-    <string name="exit_confirmation_title">Confirm Exit</string>
-    <string name="exit_confirmation_message">Are you sure you want to exit Navigator</string>
+    <string name="Cancel">Cancel</string>
 
 </resources>
