--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,10 @@
     <string name="measurement">Measurement </string>
     <string name="keep_arm_steady">Keep arm steady</string>
 
+    <string name="acquiring_signal">Acquiring signal...</string>
+    <string name="pulse_amplitude">PULSE AMPLITUDE</string>
+    <string name="time">TIME</string>
+
     <string name="cancel">Cancel</string>
 
 </resources>
