--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,12 @@
     <string name="test_will_begin">Test will begin in </string>
 
     <string name="exhale">Exhale. Hold constant pressure.</string>
+    <string name="measurement1">Measurement 1</string>
+    <string name="measurement2">Measurement 2</string>
+    <string name="measurement3">Measurement 3</string>
+    <string name="LVEDP">LVEDP</string>
+    <string name="rest_period">Rest Period</string>
+    <string name="test_will_resume">Test will resume in </string>
+
 
 </resources>
