Fixed screen titles being wrong.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="rest_period">Rest Period</string>
     <string name="test_complete">Test complete</string>
     <string name="test_will_resume">Test will resume in </string>
+    <string name="results">Results</string>
+    <string name="end_test">End Test</string>
 
 
 </resources>
