--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <!-- Messages -->
     <string name="dlg_title_ble_not_supported">BLE not supported</string>
     <string name="dlg_msg_ble_not_supported">This device does not support Bluetooth Low Energy (BLE)
-        which is required to communicate to the handheld."</string>
+        which is required to communicate to the handheld.</string>
 
     <string name="dlg_title_ble_enable_pre">BLE must be enabled</string>
     <string name="dlg_msg_ble_enable_pre">The next screen will allow you to enable Bluetooth
@@ -106,5 +106,20 @@
     <string name="dlg_title_location_access_no">Location access required</string>
     <string name="dlg_msg_location_access_no">Since location access has not been granted, this app
         will not be able to communicate with handheld devices.</string>
+
+    <string name="dlg_title_authentication_error">Pairing issue</string>
+    <string name="dlg_msg_authentication_error">A handheld device was detected, however it is
+        not paired with this tablet. It may show as paired in the Android settings, but could have since
+        been paired with a different tablet. See Instructions for Use for instructions on how to
+        pair the handheld with this device.</string>
+
+    <string name="dlg_title_no_paired_devices">No paired devices</string>
+    <string name="dlg_msg_no_paired_devices">A handheld device was detected, however it is
+        not paired with this tablet. See Instructions for Use for instructions on how to
+        pair the handheld with this device.</string>
+
+    <string name="dlg_title_no_handhelds">No handheld found</string>
+    <string name="dlg_msg_no_handhelds">No Indicor handhelds were detected.  Please make sure
+        the Indicor handheld is powered on and the blue LED is flashing.</string>
 
 </resources>
