Incorporated Dave's code to process the heart rate and check for stability.  Added dialog if HR is not stable after 1 minute.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,7 @@
     <string name="dlg_title_cancel_test">CANCEL TEST?</string>
     <string name="dlg_msg_cancel_test">Patient information will not be saved.</string>
 
+    <string name="dlg_title_hr_not_stable">HEART RATE NOT STABLE</string>
+    <string name="dlg_msg_hr_not_stable">The heart rate did not become stable within the allotted
+        time period.</string>
 </resources>
