--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,8 @@
     <string name="dlg_title_hr_not_stable">HEART RATE NOT STABLE</string>
     <string name="dlg_msg_hr_not_stable">The heart rate did not become stable within the allotted
         time period.</string>
+
+    <string name="dlg_title_connection_problem">PROBLEM CONNECTING</string>
+    <string name="dlg_msg_connection_problem">Theere was a problem connecting to the handheld device.
+        Try restarting it and connecting again.</string>
 </resources>
