--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="setting_lbs">lbs.</string>
     <string name="setting_mmhg">mmHg</string>
 
+    <string name="close">Close</string>
+
     <string-array name="months_array">
         <item>Jan</item>
         <item>Feb</item>
@@ -178,5 +180,6 @@
         <item>JHU-Nephrology</item>
         <item>Vixiar_Internal-Testing</item>
     </string-array>
+    <string name="title_activity_pdfview">PDFViewActivity</string>
 
 </resources>
