--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="measurement1">Measurement 1</string>
     <string name="measurement2">Measurement 2</string>
     <string name="measurement3">Measurement 3</string>
+    <string name="average">Average</string>
     <string name="LVEDP">LVEDP</string>
     <string name="rest_period">Rest Period</string>
     <string name="test_complete">Test complete</string>
