--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,8 +146,17 @@
     <string name="dlg_title_cancel_test">CANCEL TEST?</string>
     <string name="dlg_msg_cancel_test">Do you want to cancel this test? &end_test_warning2;</string>
 
-    <string name="dlg_title_hr_not_stable">PPG NOT STABLE</string>
-    <string name="dlg_msg_hr_not_stable">PPG waveform may not be stable.  Do you wish to continue? &end_test_warning1;</string>
+    <string name="dlg_title_hr_out_of_range">HEART RATE OUT OF RANGE</string>
+    <string name="dlg_msg_hr_out_of_range">Heart rate out of range.  Do you wish to try again? &end_test_warning1;</string>
+
+    <string name="dlg_title_ppg_flatline">PULSE NOT DETECTED</string>
+    <string name="dlg_msg_ppg_flatline">Not detecting a pulse signal.  Ensure the sensor is completely on and has good contact with the finger.  Do you wish to try again? &end_test_warning1;</string>
+
+    <string name="dlg_title_ppg_clipping">MOVEMENT DETECTED</string>
+    <string name="dlg_msg_ppg_clipping">Detecting movement and/or pressure on the sensor.  Ensure the patient is still with the finger sensor hanging free.  Do you wish to try again? &end_test_warning1;</string>
+
+    <string name="dlg_title_ppg_hf_noise">MOVEMENT DETECTED</string>
+    <string name="dlg_msg_ppg_hf_noise">Detecting signal interference.  Do you wish to try again? &end_test_warning1;</string>
 
     <string name="dlg_title_connection_problem">PROBLEM CONNECTING</string>
     <string name="dlg_msg_connection_problem">There was a problem connecting to the handheld device.
