Changes necessary to make this a new app in the play store.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     WILL BE LOST.">]>
 
 <resources>
-    <string name="app_name">Indicor Navigator</string>
+    <string name="app_name">Indicor Navigator 2</string>
     <!-- Training Activity -->
     <string name="pressure">Pressure</string>
     <string name="timer">Timer</string>
